# adk-mdb-memory

./: .env.example  .gitignore  README.md  blog.md  mongo_memory_service.py  pyproject.toml  requirements.txt
adk_mongodb_memory/: __init__.py  embeddings.py  service.py
examples/: 01_quickstart.py  02_agent_load_memory.py  03_multi_tenant_isolation.py  04_ttl_and_distillation.py  05_csfle.py  README.md  _shared.py
